examples/ldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ldap
  labels:
    monitoring: prometheus
