examples/ldap/slapd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slapd
  namespace: ldap
spec:
  selector:
    matchLabels:
      app: slapd
  template:
    metadata:
      labels:
        app: slapd
    spec:
      containers:
      - name: slapd
        image: 0908887875/slapd:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 389
        - containerPort: 636
---
apiVersion: v1
kind: Service
metadata:
  name: slapd
  namespace: ldap
spec:
  selector:
    app: slapd
  ports:
  - name: "389"
    port: 389
    targetPort: 389
  - name: "636"
    port: 636
    targetPort: 636
