examples/ldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: ldap-ingress
  namespace: ldap
spec:
  rules:
  - host: ldap.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: phpldapadmin
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  # tls:
  # - hosts:
  #   - ldap.127.0.0.1.nip.io
  #   secretName: ldap-tls-certificate
